--- a/install
+++ b/install
@@ -79,3 +79,17 @@ sed -i '/%wheel ALL=(ALL:ALL) NOPASSWD: ALL/s/^/#/g' /etc/sudoers
 # # Don't know yet
 # pkginstall neovim-remote
 #  install -g tree-sitter-cli
+
+# install tiling window manager
+# DWM="/home/bernardo/devs/dwm"
+# git clone git@github.com:nash169/dwm-tmp.git $DWM 
+# git -C $DWM remote add upstream git://git.suckless.org/dwm 
+# git -C $DWM fetch upstream
+# git -C $DWM merge upstream/master
+
+ST="/home/bernardo/devs/st"
+git clone git@github.com:nash169/st-tmp.git $ST 
+git -C $ST remote add upstream git://git.suckless.org/st 
+git -C $ST fetch upstream
+git -C $ST merge upstream/master
+
