--- a/install
+++ b/install
@@ -101,6 +101,15 @@ tex=(
     texlive-fontutils
     )
 
+if [$(awk -F= '$1=="NAME" { print $2 ;}' /etc/os-release | tr -d '"') == "Arch"]; then
+    sudo pacman -S lazygit
+elif [$(awk -F= '$1=="NAME" { print $2 ;}' /etc/os-release | tr -d '"') == "Ubuntu"]; then
+    LAZYGIT_VERSION=$(curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest" | grep -Po '"tag_name": "v\K[^"]*')
+    curl -Lo lazygit.tar.gz "https://github.com/jesseduffield/lazygit/releases/latest/download/lazygit_${LAZYGIT_VERSION}_Linux_x86_64.tar.gz"
+    tar xf lazygit.tar.gz lazygit
+    sudo install lazygit /usr/local/bin
+fi
+
 # # EDITOR
 # source /root/linux-config/scripts/modules/editor.sh $1 $username
 
