--- a/latex/.config/latexmk/styles/math.sty
+++ b/latex/.config/latexmk/styles/math.sty
@@ -180,6 +180,14 @@
 \newcommand{\td}[1]{\dot{#1}}
 \newcommand{\tdd}[1]{\ddot{#1}}
 
+% Material derivative
+\newcommand{\md}[1]{\frac{D}{D t}#1}
+
+% Vector derivatives
+\newcommand{\grad}[1]{\nabla #1}
+\let\division\div
+\renewcommand{\div}[1]{\nabla \cdot #1}
+
 % Dataset
 \newcommand{\dataset}{{\cal D}}
 
