added shortcut for definition symbol

--- a/latex/.config/latexmk/styles/math.sty
+++ b/latex/.config/latexmk/styles/math.sty
@@ -214,3 +214,5 @@
 % Text mode
 \let\textt\t
 \renewcommand{\t}{\relax\ifmmode\expandafter\text\else\textt\fi}
+
+\newcommand{\defeq}{\vcentcolon=}
