--- a/latex/.config/latexmk/styles/math.sty
+++ b/latex/.config/latexmk/styles/math.sty
@@ -173,6 +173,9 @@
 \newcommand{\s}{\expandafter\mathcal}
 
 % number set
+\newcommand{\ns}{\expandafter\mathbb}
+
+% real numbers
 \newcommand{\R}{%
   \@ifnextchar\bgroup
     {\R@witharg}%
@@ -180,13 +183,6 @@
 }
 \newcommand{\R@witharg}[1]{\mathbb{R}^{#1}}
 \newcommand{\R@noarg}{\mathbb{R}}
-\newcommand{\N}{%
-  \@ifnextchar\bgroup
-    {\N@witharg}%
-    {\N@noarg}%
-}
-\newcommand{\N@witharg}[1]{\mathbb{N}^{#1}}
-\newcommand{\N@noarg}{\mathbb{N}}
 
 % function
 \declaremathcommand{\f}{\expandafter\operatorname}
